--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <body>
         <p class="resume">Resume</p>
         <p class="position">Junior Frontend Developer</p>
-        <div class="block_resume"></div>
+        <div class="block_resume">
+            <header>
+                <section class="menu">
+                <nav>
+                    <ul class="nav menu" >
+                        <li><a>About me</a></li>
+                        <li><a>Education</a></li>
+                        <li><a>Projects</a></li>
+                        <li><a>Skills</a></li>
+                        <li><a>Contacts</a></li>
+                    </ul>
+                </nav>
+                </section>
+            </header>
+        </div>
     </body>
 </html>
