update index add foto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <title>Savicheva Daria CV</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -20,6 +22,34 @@
                 </nav>
                 </section>
             </header>
+            <table>
+                <tr>
+                    <td rowspan="6"><img src="9716889.jpg" alt="Foto"></td>
+                    <td>Имя</td>
+                    <td>Савичева Дарья</td>
+                    <td rowspan="6"><button>Messege me</button></td>
+                </tr>
+                <tr>
+                    <td>Пол</td>
+                    <td>Женский</td>
+                </tr>
+                <tr>
+                    <td>Дата рождений</td>
+                    <td>01.10.1992</td>
+                </tr>
+                <tr>
+                    <td>Образование</td>
+                    <td>Высшее (Управленческое)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Среднее-профессиональное (Техническое)</td>
+                </tr>
+                <tr>
+                    <td>Гражданство</td>
+                    <td>Российская Федерация</td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
